fix(#91): Login with Apple must only be visible on iOS devices

--- a/src/app/modules/login/login.page.scss
+++ b/src/app/modules/login/login.page.scss
@@ -45,6 +45,7 @@ form {
 
 .small-text-container {
   display: flex;
+  cursor: pointer;
   flex-direction: column;
   align-items: center;
   font-size: .75rem;
